Memory optimizations for droplet read processing (#491)
* Update TgzUtil to be more memory efficient
* Updated test and structure of ArchiveResult
* Updated ExtractJavaArtifactsFromDropletTask
* Added missing final modifiers to member variables in *Task
* Updated PivnetClient and PivnetSettings.  Tanzu Network API does no longer requires authToken for read-only operations.